# aii-practica-1

./: DBSCAN_ipynb_.ipynb  clean_data.csv  clean_data_db_scan.csv  def_face_recognition2.ipynb  gd_utils.py  my-data.csv  mydataframe.csv  practica_reshenie4.ipynb  pyproject.toml  uniform_classifier.ipynb  work_with_df.ipynb  Классификатор_на_входящие,_выходящие.ipynb  Создание датафрейма.ipynb  Создание_датафрейма.ipynb  Фильтрация_кропнутых_фото_по_DataFrame.ipynb  сclassifier_modal.ipynb
